# naly

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GITHUB_ISSUE.md  README-PowerPoint-RAG.md  README.md  commit-and-push.sh  demo_ppt_rag.sh  issue_template.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  ppt_rag_system.py  registry.json  sample1_enhanced.pptx  slide3_group_shapes_analysis.json  tailwind.config.ts  test_ppt_rag_system.py  tsconfig.json
app/: page.tsx
examples/: CLAUDE.md  ENHANCED_GENERATOR_SUMMARY.md  README_ENHANCED.md  enhanced.pptx  enhancement_changelog.md  generated_presentation.pptx  ppt_extractor.py  ppt_generator.py  ppt_generator_enhanced.py  pyproject.toml  sample1-1_enhanced.pptx  sample1-1_enhanced_layouts.json  sample1-1_enhanced_properties.json  sample1-1_enhanced_shapes.json  sample1-1_enhanced_summary.json  sample1-1_enhanced_theme.json  sample1-1_properties.json  sample1-1_shapes.json  sample1-1_summary.json  sample1_layouts.json  sample1_properties.json  sample1_shapes.json  sample1_summary.json  sample1_theme.json  test_multiple_files.py  validation_report.md  ~$generated_presentation.pptx
examples/extract/: blank.pptx  debug_line_issue.py  debug_shape_94.py  ppt_extractor.py  ppt_generator.py  sample1-1.pptx  sample1-1_enhanced.pptx  sample1-1_layouts.json  sample1-1_media.json  sample1-1_properties.json  sample1-1_shapes.json  sample1-1_summary.json  sample1-1_theme.json  structure_comparison.py  test.sh  test_custom_geometry.pptx  test_custom_geometry_full.pptx  test_custom_geometry_v2.pptx  test_enhanced_features.py  test_generation.pptx
(+1277 files in other folders)
